Updated welcome template

--- a/server/utils/testEmail.html
+++ b/server/utils/testEmail.html
@@ -37,7 +37,7 @@
             <tr>
               <td
                 style="
-                  background: linear-gradient(135deg, #0046ff 0%, #7b2cbf 100%);
+                  background: #0046ff;
                   color: white;
                   padding: 40px 20px;
                   text-align: center;
@@ -45,9 +45,9 @@
                 "
               >
                 <h1 style="margin: 0; font-size: 32px; font-weight: 700">
-                  Welcome to Flipture! 🎉
+                  Welcome to Flipture!
                 </h1>
-                <p style="margin: 15px 0 0; opacity: 0.9; font-size: 16px">
+                <p style="margin: 10px 0 0; opacity: 1; font-size: 16px">
                   Transform your PDFs into stunning 3D flipbooks
                 </p>
               </td>
@@ -83,7 +83,7 @@
                     background: white;
                     margin: 15px 0;
                     border-radius: 8px;
-                    border-left: 4px solid #0046ff;
+                    border: 1px solid #8d8d8d;
                   "
                 >
                   <tr>
@@ -97,7 +97,7 @@
                       >
                         ✨ What you can do with Flipture:
                       </h3>
-                      <ul style="margin: 10px 0; padding-left: 20px">
+                      <ul style="margin: 10px 0; padding-left: 30px">
                         <li style="margin: 5px 0">
                           <strong>Upload PDFs</strong> - Drag and drop your
                           documents
@@ -164,14 +164,14 @@
                   border="0"
                   width="100%"
                   style="
-                    background: #e3f2fd;
+                    background: #0044ff07;
                     margin: 25px 0;
                     border-radius: 8px;
-                    border-left: 4px solid #2196f3;
+                    border: 1px solid #0044ff;
                   "
                 >
                   <tr>
-                    <td style="padding: 15px">
+                    <td style="padding: 16px">
                       <strong>💡 Pro Tip:</strong> Free accounts can create up
                       to 3 flipbooks. Upgrade anytime for unlimited flipbooks
                       and premium features!
@@ -180,8 +180,8 @@
                 </table>
 
                 <p style="color: #666; font-size: 14px; margin: 25px 0 0 0">
-                  Questions? Need help? Just reply to this email - we're here to
-                  help!
+                  Questions? Need help? Contact our support team at
+                  <a href="mailto:support@flipture.io">support@flipture.io</a>
                 </p>
               </td>
             </tr>
