Updated templates for subscription success/cancelled WIP

--- a/server/utils/testEmail.html
+++ b/server/utils/testEmail.html
@@ -41,14 +41,14 @@
                   color: white;
                   padding: 40px 20px;
                   text-align: center;
-                  border-radius: 10px 10px 0 0;
+                  border-radius: 16px 16px 0 0;
                 "
               >
                 <h1 style="margin: 0; font-size: 32px; font-weight: 700">
-                  Welcome to Flipture!
+                  Subscription Update
                 </h1>
-                <p style="margin: 10px 0 0; opacity: 1; font-size: 16px">
-                  Transform your PDFs into stunning 3D flipbooks
+                <p style="margin: 15px 0 0; opacity: 1; font-size: 16px">
+                  Your subscription has been cancelled
                 </p>
               </td>
             </tr>
@@ -59,20 +59,18 @@
                 style="
                   background: #f9f9f9;
                   padding: 30px 20px;
-                  border-radius: 0 0 10px 10px;
+                  border-radius: 0 0 16px 16px;
                 "
               >
                 <h2 style="color: #333; margin-top: 0; font-weight: 600">
-                  Hi ${userName}! 👋
+                  Hi ${userName},
                 </h2>
 
                 <p style="font-size: 16px; margin: 15px 0">
-                  Thank you for joining Flipture! We're excited to help you
-                  create beautiful, interactive flipbooks that engage your
-                  audience.
+                  We wanted to let you know that your <strong>${planName}</strong> subscription has been cancelled and you've been moved to the <strong>Free plan</strong>.
                 </p>
 
-                <!-- Feature Box -->
+                <!-- Warning Box -->
                 <table
                   role="presentation"
                   cellspacing="0"
@@ -80,52 +78,71 @@
                   border="0"
                   width="100%"
                   style="
-                    background: white;
-                    margin: 15px 0;
+                    background: rgba(255, 128, 64, 0.05);
+                    margin: 20px 0;
                     border-radius: 8px;
-                    border: 1px solid #8d8d8d;
+                    border: 1px solid rgba(255, 128, 64, 1);
                   "
                 >
                   <tr>
-                    <td style="padding: 15px">
+                    <td style="padding: 20px">
                       <h3
                         style="
                           margin: 0 0 10px 0;
-                          color: #0046ff;
+                          color: rgba(255, 128, 64, 1);
                           font-weight: 600;
                         "
                       >
-                        ✨ What you can do with Flipture:
+                        ⚠️ What this means for you:
                       </h3>
-                      <ul style="margin: 10px 0; padding-left: 30px">
-                        <li style="margin: 5px 0">
-                          <strong>Upload PDFs</strong> - Drag and drop your
-                          documents
-                        </li>
-                        <li style="margin: 5px 0">
-                          <strong>3D Page Flipping</strong> - Realistic
-                          page-turning animations
-                        </li>
-                        <li style="margin: 5px 0">
-                          <strong>Share Instantly</strong> - Get shareable links
-                          in seconds
-                        </li>
-                        <li style="margin: 5px 0">
-                          <strong>Mobile Friendly</strong> - Perfect on all
-                          devices
-                        </li>
-                        <li style="margin: 5px 0">
-                          <strong>Track Performance</strong> - See views and
-                          engagement
-                        </li>
+                      <ul style="margin: 10px 0; padding-left: 20px">
+                        <li style="margin: 5px 0">You can keep all your existing flipbooks</li>
+                        <li style="margin: 5px 0">You cannot create new flipbooks if you have 3 or more</li>
+                        <li style="margin: 5px 0">New uploads are limited to 5MB (instead of ${
+                          planName === "Premium" ? "50MB" : "30MB"
+                        })</li>
+                        <li style="margin: 5px 0">You cannot edit flipbook details anymore</li>
+                        <li style="margin: 5px 0">Watermarks will appear on new flipbooks</li>
+                        <li style="margin: 5px 0">Analytics access has been removed</li>
                       </ul>
                     </td>
                   </tr>
                 </table>
 
-                <p style="font-size: 16px; margin: 25px 0 20px 0">
-                  Ready to create your first flipbook? It only takes a few
-                  minutes!
+                <!-- Info Box -->
+                <table
+                  role="presentation"
+                  cellspacing="0"
+                  cellpadding="0"
+                  border="0"
+                  width="100%"
+                  style="
+                    background: rgba(28, 76, 191, 0.05);
+                    margin: 20px 0;
+                    border-radius: 8px;
+                    border: 1px solid #1c4cbf;
+                  "
+                >
+                  <tr>
+                    <td style="padding: 20px">
+                      <h3
+                        style="
+                          margin: 0 0 5px 0;
+                          color: #1c4cbf;
+                          font-weight: 600;
+                        "
+                      >
+                        💡 Your Content is Safe
+                      </h3>
+                      <p style="margin: 5px 0; color: #1c4cbf">
+                        All your existing flipbooks remain accessible and can be viewed and shared as usual.
+                      </p>
+                    </td>
+                  </tr>
+                </table>
+
+                <p style="font-size: 16px; margin: 20px 0">
+                  If you'd like to regain access to premium features, you can reactivate your subscription at any time.
                 </p>
 
                 <!-- Button -->
@@ -137,9 +154,9 @@
                   width="100%"
                 >
                   <tr>
-                    <td align="center">
+                    <td align="center" style="padding-top: 10px">
                       <a
-                        href="https://flipture.netlify.app/dashboard"
+                        href="https://flipture.io/pricing"
                         style="
                           display: inline-block;
                           background: #0046ff;
@@ -147,41 +164,24 @@
                           padding: 14px 35px;
                           text-decoration: none;
                           border-radius: 8px;
-                          margin: 20px 0;
+                          margin: 0;
                           font-weight: 600;
                         "
-                        >Create Your First Flipbook</a
+                        >View Pricing Plans</a
                       >
                     </td>
                   </tr>
                 </table>
 
-                <!-- Pro Tip Box -->
-                <table
-                  role="presentation"
-                  cellspacing="0"
-                  cellpadding="0"
-                  border="0"
-                  width="100%"
+                <p
                   style="
-                    background: #0044ff07;
-                    margin: 25px 0;
-                    border-radius: 8px;
-                    border: 1px solid #0044ff;
+                    color: #666;
+                    font-size: 14px;
+                    margin-top: 30px;
+                    text-align: center;
                   "
                 >
-                  <tr>
-                    <td style="padding: 16px">
-                      <strong>💡 Pro Tip:</strong> Free accounts can create up
-                      to 3 flipbooks. Upgrade anytime for unlimited flipbooks
-                      and premium features!
-                    </td>
-                  </tr>
-                </table>
-
-                <p style="color: #666; font-size: 14px; margin: 25px 0 0 0">
-                  Questions? Need help? Contact our support team at
-                  <a href="mailto:support@flipture.io">support@flipture.io</a>
+                  If you have any questions or believe this was a mistake, please contact us at <a href="mailto:support@flipture.io">support@flipture.io</a>.
                 </p>
               </td>
             </tr>
